--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -1,5 +1,5 @@
-name: Setup Geode CLI
-description: Sets up Geode CLI
+name: Setup Sapfire CLI
+description: Sets up Sapfire CLI
 
 inputs:
   version:
@@ -25,17 +25,17 @@ runs:
   - name: Download
     uses: robinraju/release-downloader@v1.10
     with:
-      repository: geode-sdk/cli
+      repository: sapfire-sdk/cli
       latest: ${{ inputs.version == 'latest' }}
       tag: ${{ inputs.version != 'latest' && inputs.version || '' }}
       fileName: '*-${{ steps.platform.outputs.host }}.zip'
       tarBall: false
       zipBall: false
-      out-file-path: "my-epic-geode-cli"
+      out-file-path: "my-epic-sapfire-cli"
 
   - name: Setup
     shell: bash
     run: |
-      7z x "my-epic-geode-cli/*-${{ steps.platform.outputs.host }}.zip" -omy-epic-geode-cli
-      chmod +x my-epic-geode-cli/geode
-      echo "$GITHUB_WORKSPACE/my-epic-geode-cli" >> $GITHUB_PATH
+      7z x "my-epic-sapfire-cli/*-${{ steps.platform.outputs.host }}.zip" -omy-epic-sapfire-cli
+      chmod +x my-epic-sapfire-cli/sapfire
+      echo "$GITHUB_WORKSPACE/my-epic-sapfire-cli" >> $GITHUB_PATH
