--- a/.github/workflows/draft-release.yml
+++ b/.github/workflows/draft-release.yml
@@ -16,7 +16,7 @@ jobs:
           VERSION=v$(cat Cargo.toml | sed -nr 's/version = \"(.+)\"/\1/p' | head -1)
           # gets the latest action run from the main branch
           BRANCH=main
-          API_URL="https://api.github.com/repos/geode-sdk/cli/actions/workflows/build.yml/runs?per_page=1&branch=$BRANCH&event=push&status=success"
+          API_URL="https://api.github.com/repos/sapfire-sdk/cli/actions/workflows/build.yml/runs?per_page=1&branch=$BRANCH&event=push&status=success"
           RUN_ID=$(curl $API_URL | jq .workflow_runs[0].id)
 
           echo "version=$VERSION" >> $GITHUB_OUTPUT
@@ -60,9 +60,9 @@ jobs:
       - name: Rename files
         run: |
           cd ${{ github.workspace }}/artifacts
-          mv geode-cli-win.zip geode-cli-${{ steps.info.outputs.version }}-win.zip
-          mv geode-cli-mac.zip geode-cli-${{ steps.info.outputs.version }}-mac.zip
-          mv geode-cli-linux.zip geode-cli-${{ steps.info.outputs.version }}-linux.zip
+          mv sapfire-cli-win.zip sapfire-cli-${{ steps.info.outputs.version }}-win.zip
+          mv sapfire-cli-mac.zip sapfire-cli-${{ steps.info.outputs.version }}-mac.zip
+          mv sapfire-cli-linux.zip sapfire-cli-${{ steps.info.outputs.version }}-linux.zip
 
       - name: Create Draft Release
         uses: softprops/action-gh-release@v1
